add pip install

--- a/notebooks/pitch_dominance.ipynb
+++ b/notebooks/pitch_dominance.ipynb
@@ -22,6 +22,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# This builds the soccerutils module in the Analytics Handbook so you can import it\n",
+    "!pip install git+https://github.com/devinpleuler/analytics-handbook.git"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -504,7 +514,7 @@
    "source": [
     "By applying a contour plot on top of this surface, we can easily display this dominance surface with player dots plotted on top.\n",
     "\n",
-    "---"
+    "You can play with the number of `levels` and additional `guassian_filter` to adjust the visualization to your liking."
    ]
   },
   {
