Minor text fix.

--- a/notebooks/clustering.ipynb
+++ b/notebooks/clustering.ipynb
@@ -124,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This time, we import `LogisticRegression` from `sklearn.linear_model` and create an object of it.\n",
+    "This time, we import `KMeans` from `sklearn.cluster` and create an object of it.\n",
     "\n",
     "---"
    ]
