--- a/notebooks/nn_pass_difficulty.ipynb
+++ b/notebooks/nn_pass_difficulty.ipynb
@@ -356,7 +356,7 @@
     "\n",
     "As you can see in the model structure below, we pass in two seperate inputs. One is the training data that we construct via `build_tensor()`, but we also pass in the sparse spatial representation of the destination as a seperate input.\n",
     "\n",
-    "We borrow that layer to *mask* (via multiplication) the final prediction surface such that we can grab the prediction at the cell on the surface that matches the actual destination of the pass and compare it to the true value with log loss."
+    "We borrow that layer to *mask* (via multiplication) the final prediction surface such that we can grab the prediction at the cell on the surface that matches the il destination of the pass and compare it to the true value with log loss."
    ]
   },
   {
@@ -598,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Notice the dimples in pass difficult around the origin of the pass. This is due to survivorship bias cased by incomplete passes being cut out before they reach their intended destination. In particular, this happens frequently with blocked passes near the origin, causing this interesting artifact. In an ideal world, we would be using the intended destinatino of the pass as opposed to the actuaion destination, but that's impossible in the event-based domain."
+    "Notice the dimples in pass difficult around the origin of the pass. This is due to survivorship bias cased by incomplete passes being cut out before they reach their intended destination. In particular, this happens frequently with blocked passes near the origin, causing this interesting artifact. In an ideal world, we would be using the intended destination of the pass as opposed to the actual destination, but that's impossible in the event-based domain."
    ]
   },
   {
